<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.one20.unisonui.widget.UnisonButton
        android:id="@+id/show_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Dialog"
        style="@style/UnisonRaisedButton.Dark"/>

    <com.one20.unisonui.widget.UnisonButton
        android:id="@+id/show_with_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Show With Title"
        style="@style/UnisonRaisedButton.Dark"/>

    <com.one20.unisonui.widget.UnisonButton
        android:id="@+id/show_with_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Show With Image"
        style="@style/UnisonRaisedButton.Dark"/>

</LinearLayout>