<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/header_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        style="@style/UnisonHeaderLabel.Light"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_label"
        style="@style/UnisonEditText.Light"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@+id/textInputEditText">

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="17dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_warning"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/error_icon"
            style="@style/UnisonErrorText.Light"/>

    </RelativeLayout>


</RelativeLayout>